# bbtools-core

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh  tmp.py  tmp.txt
.github/workflows/: unit_test.yml
bbt/: Attribute.hpp  Define.hpp
bbt/Logger/: LogFile.cc  LogFile.hpp  Logger.cc  Logger.hpp
bbt/assert/: bbt_assert.hpp
bbt/base/: Define.hpp
bbt/base/Logger/: DebugPrint.cc  DebugPrint.hpp  LogFile.cc  LogFile.hpp  Logger.cc  Logger.hpp
bbt/base/assert/: Assert.hpp
bbt/base/bits/: BitUtil.hpp  Bits.hpp
bbt/base/buffer/: Buffer.cc  Buffer.hpp  __TBuffer.hpp
bbt/base/clock/: Clock.hpp  __TClock.hpp
bbt/base/config/: ConfigEnum.hpp  GlobalConfig.cc  GlobalConfig.hpp  GlobalConfig_detail.hpp
bbt/base/cxxlua/: CXXLua.hpp
bbt/base/errcode/: Errcode.cc  Errcode.hpp  IErrcode.hpp  __TErrcode.hpp
bbt/base/file/: FileHelper.cc  FileHelper.hpp  FileMapper.cc  FileMapper.hpp
bbt/base/hash/: BKDR.hpp  Hash.hpp
bbt/base/myhash/: UuidMyHash.hpp
bbt/base/net/: IPAddress.cc  IPAddress.hpp  SocketUtil.hpp
bbt/base/poolutil/: IDPool.hpp
bbt/base/random/: Random.hpp  RandomTpl.hpp
bbt/base/reflex/: Reflex.hpp  TypeInfo.hpp
bbt/base/templateutil/: BaseType.hpp  Comparator.hpp
bbt/base/thread/: Lock.hpp  LockFreeQueue.hpp  Thread.cc  Thread.hpp  ThreadPool.hpp  __TLockFreeQueue.hpp
bbt/base/timer/: Clock.hpp  Interval.hpp  TimeWheel.cc  TimeWheel.hpp
bbt/base/type/: type_traits.hpp
bbt/base/uuid/: EasyID.hpp  Uuid.hpp
bbt/bits/: BitUtil.hpp  Bits.hpp
bbt/bits/detail/: BitUtil_detail.hpp
bbt/buffer/: Buffer.cc  Buffer.hpp
bbt/config/: ConfigEnum.hpp  Define.hpp  GlobalConfig.cc  GlobalConfig.hpp  GlobalConfig_detail.hpp  bbtconfig.hpp
bbt/core/: Attribute.hpp  Define.hpp
bbt/core/Logger/: DebugPrint.cc  Logger.cc  Logger.hpp
bbt/core/buffer/: Buffer.cc  Buffer.hpp  __TBuffer.hpp
bbt/core/clock/: Clock.hpp
bbt/core/codec/: Codec.hpp  __TCodec.hpp
bbt/core/crypto/: BKDR.hpp  EasyID.hpp  Random.hpp  Uuid.cc  Uuid.hpp  __TRandom.hpp
bbt/core/errcode/: Errcode.cc  Errcode.hpp  IErrcode.hpp
bbt/core/file/: FileHelper.cc  FileHelper.hpp
bbt/core/log/: DebugPrint.cc  DebugPrint.hpp  Logger.cc  Logger.hpp
bbt/core/net/: IPAddress.cc  IPAddress.hpp  SocketUtil.cc  SocketUtil.hpp
bbt/core/reflex/: Reflex.cc  Reflex.hpp  TypeHelper.hpp  TypeInfo.cc  TypeInfo.hpp  __TReflex.hpp
bbt/core/templateutil/: Comparator.hpp  Noncopyable.hpp
bbt/core/thread/: Lock.hpp
bbt/core/util/: Assert.hpp  Bits.hpp  ManagerBase.hpp  Result.hpp  StopWatch.cc  StopWatch.hpp
bbt/cxxlua/: CXXLua.hpp
bbt/cxxlua/detail/: Caller.hpp  Caller_Def.hpp  Config.hpp  LuaArray.hpp  LuaClass.hpp  LuaClass_Def.hpp  LuaErr.hpp  LuaParams.hpp  LuaRef.hpp  LuaStack.hpp  LuaStack_Def.hpp  LuaStateBase.cc  LuaStateBase.hpp  LuaTable.hpp  LuaTable_Def.hpp  LuaVM.cc  LuaVM.hpp  LuaVM_Def.hpp  TypeHelper.hpp
bbt/detail/: Define.hpp
bbt/errcode/: Errcode.hpp  __TErrcode.hpp
bbt/file/: FileHelper.cc  FileHelper.hpp  FileMapper.cc  FileMapper.hpp
bbt/fileUtil/: FileFind.h  FileRead.cc  FileRead.h  Filedetail.h  todo.txt
bbt/lua/detail/: Caller.hpp  Define.hpp  EasyLua.hpp  LuaBase.cc  LuaBase.hpp
bbt/lua/script/: Define.lua  Preload.lua  Util.lua
bbt/macro/: Bits.hpp
bbt/myhash/: BKDR.hpp  UuidMyHash.hpp
bbt/net/: IPAddress.cc  IPAddress.hpp
bbt/perf/: PerfConfig.hpp
bbt/perf/util/: ObjectTracker.hpp
bbt/pollevent/: EvThread.cc  EvThread.hpp  Event.cc  Event.hpp  EventLoop.cc  EventLoop.hpp
bbt/pollevent/detail/: Define.cc  Define.hpp  EventBase.cc  EventBase.hpp
bbt/pollevent/interface/: IEventLoop.hpp
bbt/pool_util/: idpool.hpp  objpool.hpp
bbt/poolutil/: IDPool.hpp
bbt/random/: Random.hpp  RandomTpl.hpp  random.hpp
bbt/structure/Array/: Array_NULLCPP.cpp  Basic_Array.h  Simple_Array.h  array.h  queue.h  stack.h
bbt/structure/BSTree/: AVLTree.h  AVLinit.h  MainTest.cpp  Node.h  NodeADT.h  curd.h
bbt/structure/List/: Basic_List.h  DLinkList.h  DListNode.h  LQueue.h  LStack.h  List_NULLCPP.cpp  Pure_ListNode.h  Pure_Virtual_List.h
bbt/template_util/: comparator.hpp  noncopyable.hpp
bbt/templateutil/: BaseType.hpp  Noncopyable.hpp
bbt/thread/: Lock.hpp  Thread.cc  Thread.hpp  ThreadPool.hpp
bbt/threadpool/: Thread.cc  Thread.hpp  ThreadPool.hpp
bbt/timer/: Clock.hpp  Interval.hpp  TimeWheel.hpp  clock.hpp  interval.hpp  stopwatch.hpp  timewheel.cc  timewheel.hpp
bbt/timer/detail/: Task.hpp  (+7 more)
bbt/type/: type_traits.hpp
bbt/uuid/: EasyID.hpp  Uuid.hpp
example/: CMakeLists.txt  fileutil.cc
example/attribute/: CMakeLists.txt  attributetest.cc
example/codec/: example_codec.cc
example/errcode/: example_result.cc
example/filehelper/: CMakeLists.txt  test_main.cc
example/log/: CMakeLists.txt  logtest.cc
example/logger/: CMakeLists.txt  log.cc
example/lua/: CMakeLists.txt  luaclass.cc  luaclass.s  luatable.cc  luatest.cc
example/lua/script/: a.lua
example/lua/script/luaclass/: luaclass.lua  tempCodeRunnerFile.lua
example/macro/: CMakeLists.txt  macro.cc
example/net/: example_ipaddress.cc
example/pollevent/: timer.cc
example/pool_util/: bbt_id_pool.cc
example/reflex/: test_def_reflex.cc
example/templateutil/: manager.cc
example/test/: CMakeLists.txt  bbt_timer_test.cc
example/test/pool_util/: CMakeLists.txt  bbt_id_pool.cc
example/test/timer/: CMakeLists.txt  bbt_timewheel.cc
example/thread/: lock.cc  queue.cc
example/timer/: CMakeLists.txt  bbt_timewheel.cc  timewheel_banchmark.cc
example/uuid/: CMakeLists.txt  uuidtest.cc
shell/: build.sh  genbypath.sh  uninstall.sh
src/Logger/: Logger.cpp  Logger.h
src/detail/: Define.hpp
src/fileUtil/: FileFind.h  FileRead.cpp  FileRead.h  Filedetail.h
src/random/: random.hpp
src/structure/: Readme.md
src/threadpool/: Thread.cpp  Thread.h  Thread.hpp  ThreadPool.h
src/timer/: interval.hpp  timer_NULLCPP.cpp  timewheel.hpp  universal.h
unit_test/: CMakeLists.txt  Test_buffer.cc  Test_codec.cc  Test_generate_id.cc  Test_luaclass_gc.cc  Test_timerwheel.cc
unit_test/pollevent/: Test_eventloop.cc
(+65 files in other folders)
